refactor: move variables to the www folder and import in the html file

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
     <meta name="color-scheme" content="light dark" />
     <title>Open Source @ Equinor</title>
     <meta name="theme-color" content="#243746" />
+    <link rel="stylesheet" href="variables/index.css" />
     <meta
       name="google-site-verification"
       content="V98C1dH_Z-lSoqZtvFOfENvz3JffHRWSW0Bhj-P4NXE"
