--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,24 @@
       }
     </script>
 
+    <script>
+      // Set initial theme based on user preference
+      ;(function () {
+        const prefersDark = window.matchMedia(
+          '(prefers-color-scheme: dark)',
+        ).matches
+        const storedTheme = localStorage.getItem('theme')
+
+        if (storedTheme === 'dark' || (!storedTheme && prefersDark)) {
+          document.documentElement.classList.add('dark')
+          document.documentElement.classList.remove('light')
+        } else {
+          document.documentElement.classList.add('light')
+          document.documentElement.classList.remove('dark')
+        }
+      })()
+    </script>
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
@@ -89,7 +107,7 @@
         </p>
         <div class="flex justify-center gap-4">
           <button
-            onclick="document.documentElement.classList.remove('dark')"
+            onclick="setLightMode()"
             class="px-6 py-3 rounded-lg border transition-colors"
             style="
               background: var(--surface-element);
@@ -100,7 +118,7 @@
             Light Mode
           </button>
           <button
-            onclick="document.documentElement.classList.add('dark')"
+            onclick="setDarkMode()"
             class="px-6 py-3 rounded-lg transition-colors"
             style="
               background: var(--solid-component);
@@ -905,5 +923,32 @@
         </p>
       </footer>
     </div>
+
+    <script>
+      function setLightMode() {
+        document.documentElement.classList.add('light')
+        document.documentElement.classList.remove('dark')
+        localStorage.setItem('theme', 'light')
+      }
+
+      function setDarkMode() {
+        document.documentElement.classList.add('dark')
+        document.documentElement.classList.remove('light')
+        localStorage.setItem('theme', 'dark')
+      }
+
+      // Listen for system theme changes
+      window
+        .matchMedia('(prefers-color-scheme: dark)')
+        .addEventListener('change', (e) => {
+          if (!localStorage.getItem('theme')) {
+            if (e.matches) {
+              setDarkMode()
+            } else {
+              setLightMode()
+            }
+          }
+        })
+    </script>
   </body>
 </html>
